[gd_scene load_steps=24 format=3 uid="uid://c2uxeme2mp7gu"]

[ext_resource type="Texture2D" uid="uid://2dj1ywfy6ftg" path="res://assets/sprites/animales/carpincho.png" id="1_iuci2"]
[ext_resource type="Script" uid="uid://dbjyomeiywanh" path="res://juego/animales/carpincho/carpincho.gd" id="1_mydko"]

[sub_resource type="AtlasTexture" id="AtlasTexture_isdks"]
atlas = ExtResource("1_iuci2")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfhej"]
atlas = ExtResource("1_iuci2")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rns1"]
atlas = ExtResource("1_iuci2")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g8ow"]
atlas = ExtResource("1_iuci2")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmqfo"]
atlas = ExtResource("1_iuci2")
region = Rect2(256, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3huer"]
atlas = ExtResource("1_iuci2")
region = Rect2(320, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti04d"]
atlas = ExtResource("1_iuci2")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqbil"]
atlas = ExtResource("1_iuci2")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mydko"]
atlas = ExtResource("1_iuci2")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_50qq5"]
atlas = ExtResource("1_iuci2")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc2yk"]
atlas = ExtResource("1_iuci2")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjgsx"]
atlas = ExtResource("1_iuci2")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o1kc"]
atlas = ExtResource("1_iuci2")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtu0v"]
atlas = ExtResource("1_iuci2")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj7ly"]
atlas = ExtResource("1_iuci2")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j14e"]
atlas = ExtResource("1_iuci2")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5o2e"]
atlas = ExtResource("1_iuci2")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv6dp"]
atlas = ExtResource("1_iuci2")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8lha"]
atlas = ExtResource("1_iuci2")
region = Rect2(128, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_isdks"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_isdks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfhej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rns1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g8ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmqfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3huer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti04d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqbil")
}],
"loop": true,
"name": &"caminando",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mydko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50qq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc2yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjgsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o1kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtu0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj7ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j14e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5o2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv6dp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8lha")
}],
"loop": false,
"name": &"parado",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iuci2"]
size = Vector2(48, 34)

[node name="Carpincho" type="Node2D"]
script = ExtResource("1_mydko")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_isdks")
animation = &"caminando"
autoplay = "default"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_iuci2")

[node name="RayCastActivacion" type="RayCast2D" parent="."]
target_position = Vector2(64, 0)

[node name="RayCastDerecha" type="RayCast2D" parent="."]
target_position = Vector2(32, 0)

[node name="RayCastIzquierda" type="RayCast2D" parent="."]
target_position = Vector2(-32, 0)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
